Chart heading tweak

--- a/client/index.html
+++ b/client/index.html
@@ -1970,7 +1970,7 @@ Beijing’s shipping lines deliver more containers than those from any other cou
 				/>
 			<div id='ig-ai0-1' class='ig-ai2html-settings ig-ai-abs' style='top:0.2078%;left:0.3391%;'>
 				<p class='ig-ai-pstyle0'>China&rsquo;s combined container shipping</p>
-				<p class='ig-ai-pstyle0'>lines eclipse those of any other country</p>
+				<p class='ig-ai-pstyle0'>lines eclipse those of other countries</p>
 			</div>
 			<div id='ig-ai0-2' class='ig-ai2html-settings ig-ai-abs' style='top:12.2601%;left:0.3391%;'>
 				<p class='ig-ai-pstyle1'>2015, twenty-foot equivalent units (million)</p>
@@ -2118,7 +2118,7 @@ Beijing’s shipping lines deliver more containers than those from any other cou
 				src='https://www.ft.com/__origami/service/image/v2/images/raw/http%3A%2F%2Fft-ig-content-prod.s3.amazonaws.com%2Fv1%2Fft-interactive%2Fchinese-shipping%2Fimages%2FTop-20-carriers-Top_20_carrier_560.png?source=url-builder&format=png'
 				/>
 			<div id='ig-ai1-1' class='ig-ai2html-settings ig-ai-abs' style='top:0.1753%;left:0.3571%;'>
-				<p class='ig-ai-pstyle0'>China&rsquo;s container shipping lines eclipse those of any other country</p>
+				<p class='ig-ai-pstyle0'>China&rsquo;s container shipping lines eclipse those of other countries</p>
 			</div>
 			<div id='ig-ai1-2' class='ig-ai2html-settings ig-ai-abs' style='top:6.4854%;left:0.3571%;'>
 				<p class='ig-ai-pstyle1'>2015, twenty-foot equivalent units (million)</p>
@@ -2266,7 +2266,7 @@ Beijing’s shipping lines deliver more containers than those from any other cou
 				src='https://www.ft.com/__origami/service/image/v2/images/raw/http%3A%2F%2Fft-ig-content-prod.s3.amazonaws.com%2Fv1%2Fft-interactive%2Fchinese-shipping%2Fimages%2FTop-20-carriers-Top_20_carrier_760.png?source=url-builder&format=png'
 				/>
 			<div id='ig-ai2-1' class='ig-ai2html-settings ig-ai-abs' style='top:0.6938%;left:0.1316%;'>
-				<p class='ig-ai-pstyle0'>China&rsquo;s container shipping lines eclipse those of any other country</p>
+				<p class='ig-ai-pstyle0'>China&rsquo;s container shipping lines eclipse those of  other countries</p>
 			</div>
 			<div id='ig-ai2-2' class='ig-ai2html-settings ig-ai-abs' style='top:7.1118%;left:0.1316%;'>
 				<p class='ig-ai-pstyle1'>2015, twenty-foot equivalent units (million)</p>
